--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MainActivity">
+    tools:context=".ui.activities.MainActivity">
 
     <ImageView
         android:rotation="270"
@@ -67,6 +67,7 @@
             android:layout_marginEnd="@dimen/_35sdp"
             android:layout_marginBottom="@dimen/_25sdp"
             android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -161,12 +162,14 @@
                     android:layout_marginBottom="@dimen/_10sdp">
 
                     <ImageView
+                        android:id="@+id/btn_menu"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_menu" />
 
                     <ImageView
+                        android:id="@+id/btn_settings"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -182,24 +185,28 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/btn_1"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_1" />
 
                     <ImageView
+                        android:id="@+id/btn_4"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_4" />
 
                     <ImageView
+                        android:id="@+id/btn_7"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_7" />
 
                     <ImageView
+                        android:id="@+id/btn_star"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -217,24 +224,28 @@
                     android:showDividers="middle">
 
                     <ImageView
+                        android:id="@+id/btn_2"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_2" />
 
                     <ImageView
+                        android:id="@+id/btn_5"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_5" />
 
                     <ImageView
+                        android:id="@+id/btn_8"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_8" />
 
                     <ImageView
+                        android:id="@+id/btn_0"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -249,24 +260,28 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/btn_3"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_3" />
 
                     <ImageView
+                        android:id="@+id/btn_6"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_6" />
 
                     <ImageView
+                        android:id="@+id/btn_9"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_9" />
 
                     <ImageView
+                        android:id="@+id/btn_hash"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -282,12 +297,14 @@
                     android:layout_marginBottom="@dimen/_10sdp">
 
                     <ImageView
+                        android:id="@+id/btn_install"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:background="@drawable/ic_btn_network" />
 
                     <ImageView
+                        android:id="@+id/btn_c"
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -297,6 +314,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+
 
         </LinearLayout>
 
